feat: get version endpoint
